[gd_scene load_steps=5 format=3 uid="uid://djkqhr4h05nml"]

[ext_resource type="Script" uid="uid://d301oyiopgj8l" path="res://scripts/wind_gust.gd" id="1_8ekob"]
[ext_resource type="PackedScene" uid="uid://cfwru6fbt68k1" path="res://scenes/particles2.tscn" id="2_6pxwh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_c8gtk"]
radius = 35.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ekob"]
size = Vector2(634.5, 120)

[node name="wind_gust" type="CharacterBody2D" groups=["enemy_projectile"]]
collision_layer = 4
collision_mask = 18
script = ExtResource("1_8ekob")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_c8gtk")
disabled = true

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 27

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("RectangleShape2D_8ekob")

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="PhaseTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="Particles" parent="." instance=ExtResource("2_6pxwh")]
scale = Vector2(0.8, 0.8)

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timeout"]
[connection signal="timeout" from="PhaseTimer" to="." method="_on_phase_change"]
